--- a/variables/src/model/model.css
+++ b/variables/src/model/model.css
@@ -1,18 +1,25 @@
 .model {
-    height: 22vw;
+    height: 55vh;
+    width: 100%;
     display: flex;
-    background-color: lightgrey;
-    border-radius: 25px;
-    padding: 5px;
+    background-color: lightblue;
+    border-radius: 10px;
+    padding: 2.5px;
 
 }
 
-.variables {
-    border-radius: 15px;
+.variables-constraints-options {
     height: 100%;
-    width: 20% ;
+    width: 100%;
     display: table-cell;    
-    background-color: wheat;
+}
+
+.variables {
+    border-radius: 10px;
+    height: 10px;
+    width: 100% ;
+    display: table-cell;    
+    background-color: white;
     padding: 1px;
     margin: 1px;
     border: 2.5px solid grey;
@@ -20,41 +27,62 @@
 }
 
 .constraints {
-    border-radius: 25px;
-    height: 100%;
-    width: 30% ;
+    border-radius: 10px;
+    height: 20%;
+    width: 100% ;
     display: table-cell;
-    background-color: wheat;
-    padding: 5px;
-    margin: 2px;
+    background-color:white;
+    padding: 2px;
+    margin: 1px;
     border: 2.5px solid grey;
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 .objective {
     border-radius: 10px;
-    height: 30px;
-    width: 600px ;
-    background-color: wheat;
-    border: 2.5px solid grey;
+    height: 10%;
+    width: 98% ;
+    background-color: white;
+    border: 2px solid grey;
     margin-left: 10px;
+    margin-bottom: 10px;
     overflow-y: scroll;
 }
 
 .data {
     border-radius: 10px;
-    height: 20vw;
-    width: 90% ;
-    background-color: wheat;
+    height: 85%;
+    width: 96% ;
+    background-color: white;
     border: 2.5px solid grey;
-    display: flex;
+    display: table-cell;
     float: left;
     padding: 5px;
-    margin-left: 10px;
+    margin-left: 10px; 
+    overflow: scroll;
+    
+}
 
+.data-content {
+    float: left;
+    display: flex;
+    margin-left: 0;
+    overflow: scroll;
 }
 
 .selector{
+    width: 150px;
+    padding: 5px 5px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    box-sizing: border-box;
+    background-color: lightblue;
+    cursor: pointer;
+  }
+  
+  .generator{
     width: 150px;
     padding: 5px 5px;
     margin: 8px 0;
@@ -73,9 +101,16 @@
 
   .DataCol{
       float: left;
-      margin-left: 5px;
-      border: 1px solid black;
+      height: 140px;
+      margin-left: 7px;
+      border: 2px solid grey;
       border-spacing: 2px;
       border-radius: 4px;
       padding: 5px;
+      background-color: white;
+      overflow: scroll;
+  }
+
+  ::-webkit-scrollbar{
+    display: none;
   }
