--- a/variables/src/model/model.css
+++ b/variables/src/model/model.css
@@ -11,37 +11,38 @@
 .variables-constraints-options {
     height: 100%;
     width: 100%;
+    margin-left: 5px;
     display: table-cell;    
 }
 
 .variables {
     border-radius: 10px;
-    height: 10px;
+    height: 15%;
     width: 100% ;
-    display: table-cell;    
+    /*display: table-cell;*/    
     background-color: white;
     padding: 1px;
     margin: 1px;
     border: 2.5px solid grey;
-    margin-left: 1px;
+    overflow: scroll;
 }
 
 .constraints {
     border-radius: 10px;
-    height: 20%;
+    height: 65%;
     width: 100% ;
-    display: table-cell;
+    /*display: table-cell;*/
     background-color:white;
-    padding: 2px;
+    padding: 1px;
     margin: 1px;
     border: 2.5px solid grey;
-    margin-left: 5px;
+    overflow: scroll;
 }
 
 .objective {
-    border-radius: 10px;
+    border-radius: 5px;
     height: 10%;
-    width: 98% ;
+    width: 97% ;
     background-color: white;
     border: 2px solid grey;
     margin-left: 10px;
@@ -50,14 +51,13 @@
 }
 
 .data {
-    border-radius: 10px;
-    height: 85%;
-    width: 96% ;
+    border-radius: 5px;
+    height: 80%;
+    width: 97% ;
     background-color: white;
     border: 2.5px solid grey;
     display: table-cell;
     float: left;
-    padding: 5px;
     margin-left: 10px; 
     overflow: scroll;
     
@@ -101,15 +101,29 @@
 
   .DataCol{
       float: left;
-      height: 140px;
       margin-left: 7px;
       border: 2px solid grey;
       border-spacing: 2px;
-      border-radius: 4px;
+      border-radius: 5px;
       padding: 5px;
       background-color: white;
-      overflow: scroll;
   }
+
+  .IndexCol{
+    float: left;
+    margin-left: 7px;
+    border: 2px solid grey;
+    border-spacing: 2px;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: pink;
+}
+
+.ColGroup{
+    border: 2px solid grey;
+    padding: 5px;
+    overflow: scroll;
+}
 
   ::-webkit-scrollbar{
     display: none;
