--- a/variables/src/model/model.css
+++ b/variables/src/model/model.css
@@ -16,7 +16,7 @@
     display: table-cell;    
 }
 
-.objective-data{
+.objective-result-data{
     height: 100%;
     width: 100vh;
 }
@@ -56,9 +56,20 @@
     overflow-y: scroll;
 }
 
+.result {
+    border-radius: 10px;
+    height: 15%;
+    width: 97% ;
+    background-color: white;
+    border: 2px solid grey;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    overflow-y: scroll;
+}
+
 .data {
     border-radius: 10px;
-    height: 75%;
+    height: 55%;
     width: 97% ;
     background-color: white;
     border: 2.5px solid grey;
@@ -73,7 +84,7 @@
     float: left;
     margin-left: 0;
     overflow-x: scroll;
-    height: 70%;
+    height: 85%;
     width: 97%;
 }
 
